sinclude(./aclocal.m4)dnl Autoconf lossage.
GLIBC_PROVIDES dnl See aclocal.m4 in the top level source directory.

# If configure is passed `--with-mach=DIR', set `mach-srcdir' to DIR in
# config.make.

AC_ARG_WITH(mach, dnl
[  --with-mach=DIRECTORY   find Mach kernel source code in DIRECTORY [../mach]],
            [dnl
case z"$with_mach" in
z | zno | zyes) ;; # Not specified, or specified with no value.
z*) config_vars="$config_vars
mach-srcdir = $with_mach" ;;
esac
])
