GLIBC_PROVIDES dnl See aclocal.m4 in the top level source directory.
# Local configure fragment for sysdeps/sparc.

# Check for support of VIS3 et al. instructions in the assembler.
AC_CACHE_CHECK(for sparc assembler VIS3 support, libc_cv_sparc_as_vis3, [dnl
cat > conftest.S <<\EOF
	.text
foo:	fmadds		%f1, %f2, %f3, %f5
	fmaddd		%f2, %f4, %f8, %f10
	fhadds		%f2, %f3, %f5
	fhaddd		%f4, %f8, %f10
	pdistn		%f2, %f4, %g1
	movdtox		%f10, %o0
	movstouw	%f9, %o1
	movstosw	%f7, %o2
	movxtod		%o3, %f18
	movwtos		%o4, %f15
	flcmps		%fcc0, %f3, %f5
	flcmpd		%fcc1, %f4, %f6
EOF
dnl
if AC_TRY_COMMAND([${CC-cc} -c $CFLAGS -Wa,-Av9d conftest.S]); then
  libc_cv_sparc_as_vis3=yes
else
  libc_cv_sparc_as_vis3=no
fi
rm -f conftest*])
if test $libc_cv_sparc_as_vis3 = yes; then
  AC_DEFINE(HAVE_AS_VIS3_SUPPORT)
fi
